Issue #SB-29277 [Admin > Manage > Geo data] Geo data table header and column values are not aligned properly

--- a/src/app/client/src/app/modules/manage/components/user-org-management/user-org-management.component.scss
+++ b/src/app/client/src/app/modules/manage/components/user-org-management/user-org-management.component.scss
@@ -96,3 +96,11 @@
         background: var(--sbt-compt-bg);
     }
   }
+
+  ::ng-deep {
+      table.dataTable tbody td,
+      table.dataTable tbody th {
+        padding: 8px 18px;
+      }
+    }
+  
